[tool.poetry]
name = "nascar"
version = "0.1.0"
description = ""
authors = ["Jeremy Morrison <jeremy.morrison36@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
pandas = "^1.2.4"
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
python-dotenv = "^0.17.0"
flake8 = "^3.9.1"
black = "^20.8b1"
pandasgui = "^0.2.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
